WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115273
[WK2] Crashes under ResourceHandle::continueDidReceiveResponse when loading blobs
https://bugs.webkit.org/show_bug.cgi?id=115273
Summary
[WK2] Crashes under ResourceHandle::continueDidReceiveResponse when loading b...
Alexey Proskuryakov
Reported
2013-04-26 12:37:06 PDT
BlobResourceHandle doesn't implement didReceiveResponseAsync correctly, so it can finish (and cleanup NetworkResourceLoader) before receiving continueDidReceiveResponse message.
Attachments
proposed fix
(1.59 KB, patch)
2013-04-26 12:39 PDT
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-04-26 12:39:39 PDT
Created
attachment 199852
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-04-26 12:41:33 PDT
Committed <
http://trac.webkit.org/changeset/149204
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug