        Crashes under ResourceHandle::continueDidReceiveResponse when loading blobs         https://bugs.webkit.org/show_bug.cgi?id=115273

Reviewed by Anders Carlsson.

        Covered by multiple existing tests (when using NetworkProcess), including:
        - http/tests/fileapi/blob-url-in-subframe.html
        - http/tests/fileapi/create-blob-url-from-data-url.html

        * NetworkProcess/NetworkResourceLoader.cpp:
        (WebKit::NetworkResourceLoader::continueDidReceiveResponse):
        Work around BlobResourceHandle badness.



Canonical link: https://commits.webkit.org/133700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149204 268f45cc-cd09-0410-ab3c-d52691b4dbfc